@@ -36,7 +36,7 @@ bool AccessibilityObject::accessibilityIgnoreAttachment() const
 
 AccessibilityObjectPlatformInclusion AccessibilityObject::accessibilityPlatformIncludesObject() const
 {
-    if (AccessibilityMenuListPopup() || isMenuListOption())
+    if (isMenuListPopup() || isMenuListOption())
         return IgnoreObject;
 
     return DefaultBehavior;
